# wartcl

./: Cargo.toml  README.mkdn
benches/: basic.rs  orig.rs
examples/: repl.rs
orig/: Cargo.toml  README.mkdn  build.rs
orig/src/: lib.rs  tcl.c
src/: cmd.rs  heap.rs  lib.rs  main.rs  test.rs
