workspace = { members = ["orig"] }

[package]
name = "partclish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
debug = true
panic = "abort"

[dev-dependencies]
criterion = "0.5.1"
orig.path = "orig"

[[bench]]
name = "basic"
harness = false
